--- a/src/main/resources/net/runelite/launcher/launcher.properties
+++ b/src/main/resources/net/runelite/launcher/launcher.properties
@@ -2,7 +2,7 @@ runelite.launcher.version=${project.version}
 runelite.discord.invite=https://runelite.net/redirect/launcher/discord
 runelite.wiki.troubleshooting.link=https://runelite.net/redirect/launcher/troubleshooting
 runelite.dnschange.link=https://1.1.1.1/dns/#setup-instructions
-runelite.download.link=https://openrune.net/download/
-runelite.website=https://openrune.net/
-runelite.type.manifest=https://raw.githubusercontent.com/OriginRsPs/hosting/master/client/ClientManifest.json
-runelite.name=OpenRune
+runelite.download.link=https://SolScape.net/download/
+runelite.website=https://SolScape.net/
+runelite.type.manifest=https://raw.githubusercontent.com/hostanon222/hosting/main/ClientManifest.json
+runelite.name=SolScape
